--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -39,10 +39,10 @@
 % \documentclass[10pt,fleqn,draft]{scrreprt}
 \usepackage{changebar}
  %
-  % \newcommand{\cbs}[0]{\xspace}
-  % \newcommand{\cbe}[0]{\xspace}
- \newcommand{\cbs}{} % [0]{\cbstart{}\color{red}\xspace} %
- \newcommand{\cbe}{} % [0]{\cbend{}\color{black}\xspace} %
+   \newcommand{\cbs}[0]{\xspace}
+   \newcommand{\cbe}[0]{\xspace}
+% \newcommand{\cbs}[0]{\cbstart{}\color{red}\xspace} %
+% \newcommand{\cbe}[0]{\cbend{}\color{black}\xspace} %
 
 
 \usepackage{pdflscape}
