used set and sequence in semantics of documents and networks

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -6014,11 +6014,11 @@ Note  that $dolLibrary$.\syntax{libraryName} is just discarded here.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\semdom{sem(\Gamma, \syntax{LibraryItem}^*)= \Gamma'} 
+\semdom{sem(\Gamma, Sequence(\syntax{LibraryItem}))= \Gamma'} 
 
 If $libItem_1,\ldots,libItem_n$ are all \syntax{LibraryItem}s, 
 
-$$sem(\Gamma, libItem_1, \ldots, libItem_n) = \Gamma'$$
+$$sem(\Gamma, Sequence\{libItem_1, \ldots, libItem_n\}) = \Gamma'$$
 
 \noindent where \\
 $sem(\Gamma, libItem_1)= \Gamma_1$,\\
@@ -6168,10 +6168,10 @@ $$sem(\Gamma, n)= G'$$
 \noindent where $sem(\Gamma, n.\syntax{networkElement}) = G$ and 
 $sem(\Gamma, G, n.\syntax{excludedElement}) = G'$.
 
-\semdom{sem(\Gamma, \syntax{NetworkElement}^*) = G'}
+\semdom{sem(\Gamma, Set(\syntax{NetworkElement})) = G'}
 
 If $elem_1, \ldots, elem_n$ are all \syntax{NetworkElement}s,
-$$sem(\Gamma, elem_1, \ldots, elem_n) = G'$$
+$$sem(\Gamma, Set\{elem_1, \ldots, elem_n\}) = G'$$
 
 \noindent where \\
  $G_1 = sem(\Gamma, G_\emptyset, elem_1)$\\
@@ -6185,10 +6185,10 @@ $$sem(\Gamma, elem_1, \ldots, elem_n) = G'$$
 If $networkElement$ is a \syntax{NetworkElement},
 $$sem(\Gamma, G, networkElement) = insert(G, \Gamma, networkElement.\syntax{elementRef}.\syntax{iri}, networkElement.\syntax{id})$$
 
-\semdom{sem(\Gamma, G, \syntax{ExcludedElement}^*)= G'}
+\semdom{sem(\Gamma, G, Set(\syntax{ExcludedElement}))= G'}
 
 If $elem_1, \ldots, elem_n$ are all \syntax{ExcludedElement}s,
-$$sem(\Gamma, G, elem_1, \ldots, elem_n) = G'$$
+$$sem(\Gamma, G, Set\{elem_1, \ldots, elem_n\}) = G'$$
 \noindent where\\
  $G_1 = sem(\Gamma, G, elem_1)$\\
  $G_2 = sem(\Gamma, G_1, elem_2)$\\
